fixed line after title not showing

--- a/modules/about.scss
+++ b/modules/about.scss
@@ -5,9 +5,11 @@
 .about {
     @include mixins.section-style (palette.$bg-color-alt, palette.$second-color-alt, 40px, palette.$first-color-alt, 18px);    
     @include mixins.title-line (palette.$second-color-alt);
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
+    &__container {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+    }
     &__img {
         height: 200px;
         width: 200px;
@@ -19,6 +21,5 @@
             height: 150px;
             width: 150px;
         } 
-    }
-}  
-
+    }  
+}
